P2020 - Annonces 9eme (type manquants) + unit test + refact Abstract