@@ -13,19 +13,24 @@ import java.util.HashSet;
 import java.util.Set;
 import org.apache.commons.lang.StringUtils;
 import ch.admin.zas.rc.AbgangsmeldungType;
+import ch.admin.zas.rc.AenderungsmeldungAO9Type;
+import ch.admin.zas.rc.AenderungsmeldungHE9Type;
 import ch.admin.zas.rc.AenderungsmeldungO9Type;
 import ch.admin.zas.rc.DJE9BeschreibungType;
 import ch.admin.zas.rc.DJE9BeschreibungWeakType;
-import ch.admin.zas.rc.FamilienAngehoerigeType;
 import ch.admin.zas.rc.Gutschriften9Type;
 import ch.admin.zas.rc.Gutschriften9WeakType;
 import ch.admin.zas.rc.IVDaten9Type;
 import ch.admin.zas.rc.IVDaten9WeakType;
+import ch.admin.zas.rc.IVDatenHE9Type;
+import ch.admin.zas.rc.IVDatenHE9WeakType;
 import ch.admin.zas.rc.RRLeistungsberechtigtePersonAuslType;
 import ch.admin.zas.rc.RRLeistungsberechtigtePersonAuslWeakType;
 import ch.admin.zas.rc.RRMeldung9Type;
 import ch.admin.zas.rc.SkalaBerechnungType;
+import ch.admin.zas.rc.SkalaBerechnungWeakType;
 import ch.admin.zas.rc.ZuwachsmeldungAO9Type;
+import ch.admin.zas.rc.ZuwachsmeldungHE9Type;
 import ch.admin.zas.rc.ZuwachsmeldungO9Type;
 
 /**
@@ -50,78 +55,56 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
     @Override
     public Object getAnnonceXml(REAnnoncesAbstractLevel1A annonce, String forMoisAnneeComptable, BSession session,
             BITransaction transaction) throws Exception {
-
+        int genrePrestation = Integer.parseInt(annonce.getGenrePrestation());
         int codeApplication = Integer.parseInt(annonce.getCodeApplication());
         switch (codeApplication) {
             case 41:
             case 43:
-                REAnnoncesAugmentationModification9Eme augmentation9eme01 = new REAnnoncesAugmentationModification9Eme();
-                augmentation9eme01.setSession(session);
-                augmentation9eme01.setIdAnnonce(annonce.getIdAnnonce());
-                augmentation9eme01.retrieve();
+                REAnnoncesAugmentationModification9Eme augmentation9eme01 = retrieveAnnonceAugModif9(annonce, session);
 
-                REAnnoncesAugmentationModification9Eme augmentation9eme02 = new REAnnoncesAugmentationModification9Eme();
-                augmentation9eme02.setSession(session);
-                augmentation9eme02.setIdAnnonce(augmentation9eme01.getIdLienAnnonce());
-                augmentation9eme02.retrieve();
+                REAnnoncesAugmentationModification9Eme augmentation9eme02 = retrieveAnnonceAugModif9(
+                        augmentation9eme01, session);
 
-                if (!augmentation9eme01.isNew()) {
-                    augmentation9eme01.setEtat(IREAnnonces.CS_ETAT_ENVOYE);
-                    augmentation9eme01.update(transaction);
-                }
-                if (!augmentation9eme02.isNew()) {
-                    augmentation9eme02.setEtat(IREAnnonces.CS_ETAT_ENVOYE);
-                    augmentation9eme02.update(transaction);
-                }
-                // parseAugmentationAvecAnakin(augmentation9eme01, augmentation9eme02, session, forMoisAnneeComptable);
+                checkAndUpdate9eme(augmentation9eme01, transaction);
+                checkAndUpdate9eme(augmentation9eme02, transaction);
 
-                if (ordentlicheRente.contains(new Integer(augmentation9eme01.getGenrePrestation()))) {
+                parseAugmentationAvecAnakin(augmentation9eme01, augmentation9eme02, session, forMoisAnneeComptable);
+
+                if (ordentlicheRente.contains(genrePrestation)) {
                     if (codeApplication == 41) {
                         return annonceAugmentationOrdinaire9e(augmentation9eme01, augmentation9eme02);
                     } else {
                         return annonceChangementOrdinaire9e(augmentation9eme01, augmentation9eme02);
                     }
-                } else if (ausserordentlicheRente.contains(new Integer(augmentation9eme01.getGenrePrestation()))) {
+                } else if (ausserordentlicheRente.contains(genrePrestation)) {
                     if (codeApplication == 41) {
                         return annonceAugmentationExtraOrdinaire9e(augmentation9eme01, augmentation9eme02);
                     } else {
                         return annonceChangementExtraOrdinaire9e(augmentation9eme01, augmentation9eme02);
                     }
-                } else if (hilflosenentschaedigung.contains(new Integer(augmentation9eme01.getGenrePrestation()))) {
+                } else if (hilflosenentschaedigung.contains(genrePrestation)) {
                     if (codeApplication == 41) {
-                        return annonceAugmentationOrdinaire9e(augmentation9eme01, augmentation9eme02);
+                        return annonceAugmentationAPI9e(augmentation9eme01, augmentation9eme02);
                     } else {
-                        return annonceChangementExtraOrdinaire9e(augmentation9eme01, augmentation9eme02);
+                        return annonceChangementAPI9e(augmentation9eme01, augmentation9eme02);
                     }
-
                 } else {
                     throw new Exception("no match into the expected genre de prestation");
                 }
 
             case 42:
-                REAnnoncesDiminution9Eme diminution9eme01 = new REAnnoncesDiminution9Eme();
-                diminution9eme01.setSession(session);
-                diminution9eme01.setIdAnnonce(annonce.getIdAnnonce());
-                diminution9eme01.retrieve();
-                if (!diminution9eme01.isNew()) {
-                    diminution9eme01.setEtat(IREAnnonces.CS_ETAT_ENVOYE);
-                    diminution9eme01.update(transaction);
-                }
+                REAnnoncesDiminution9Eme diminution9eme01 = retrieveAnnonceDimi9(annonce, session);
+                checkAndUpdateDimi9eme(diminution9eme01, transaction);
+                parseDiminutionAvecAnakin(diminution9eme01, session, forMoisAnneeComptable);
 
-                if (ordentlicheRente.contains(new Integer(diminution9eme01.getGenrePrestation()))) {
-
+                if (ordentlicheRente.contains(genrePrestation)) {
                     return annonceDiminutionOrdinaire(diminution9eme01);
-
                 }
-                if (ausserordentlicheRente.contains(new Integer(diminution9eme01.getGenrePrestation()))) {
-
+                if (ausserordentlicheRente.contains(genrePrestation)) {
                     return annonceDiminutionExtraOrdinaire(diminution9eme01);
-
                 }
-                if (hilflosenentschaedigung.contains(new Integer(diminution9eme01.getGenrePrestation()))) {
-
+                if (hilflosenentschaedigung.contains(genrePrestation)) {
                     return annonceDiminutionAPI(diminution9eme01);
-
                 }
                 // parseDiminutionAvecAnakin(diminution9eme01, session, forMoisAnneeComptable);
 
@@ -130,29 +113,140 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
         throw new Exception("no match into the expected variable paussibilities");
     }
 
-    protected AbgangsmeldungType createDiminutionCommune(REAnnoncesDiminution9Eme enr01) throws Exception {
-        AbgangsmeldungType diminution = factoryType.createAbgangsmeldungType();
-        diminution.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
+    protected void checkAndUpdateDimi9eme(REAnnoncesDiminution9Eme diminution9eme01, BITransaction transaction)
+            throws Exception {
+        if (!diminution9eme01.isNew()) {
+            diminution9eme01.setEtat(IREAnnonces.CS_ETAT_ENVOYE);
+            diminution9eme01.update(transaction);
+        }
+    }
 
-        diminution.setKasseZweigstelle(retourneCaisseAgence());
-        diminution.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
-        diminution.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
-        AbgangsmeldungType.LeistungsberechtigtePerson person = factoryType
-                .createAbgangsmeldungTypeLeistungsberechtigtePerson();
-        person.setVersichertennummer(enr01.getNoAssAyantDroit());
-        diminution.setLeistungsberechtigtePerson(person);
-        AbgangsmeldungType.Leistungsbeschreibung description = factoryType
-                .createAbgangsmeldungTypeLeistungsbeschreibung();
-        description.getLeistungsart().add(enr01.getGenrePrestation());
+    protected REAnnoncesDiminution9Eme retrieveAnnonceDimi9(REAnnoncesAbstractLevel1A annonce, BSession session)
+            throws Exception {
+        REAnnoncesDiminution9Eme diminution9eme01 = new REAnnoncesDiminution9Eme();
+        diminution9eme01.setSession(session);
+        diminution9eme01.setIdAnnonce(annonce.getIdAnnonce());
+        diminution9eme01.retrieve();
+        return diminution9eme01;
+    }
+
+    protected REAnnoncesAugmentationModification9Eme retrieveAnnonceAugModif9(REAnnoncesAbstractLevel1A annonce,
+            BSession session) throws Exception {
+        REAnnoncesAugmentationModification9Eme augmentation9eme01 = new REAnnoncesAugmentationModification9Eme();
+        augmentation9eme01.setSession(session);
+        augmentation9eme01.setIdAnnonce(annonce.getIdAnnonce());
+        augmentation9eme01.retrieve();
+        return augmentation9eme01;
+    }
+
+    protected REAnnoncesAugmentationModification9Eme retrieveAnnonceAugModif9_2(
+            REAnnoncesAugmentationModification9Eme augmentation9eme01, BSession session) throws Exception {
+        REAnnoncesAugmentationModification9Eme augmentation9eme02 = new REAnnoncesAugmentationModification9Eme();
+        augmentation9eme02.setSession(session);
+        augmentation9eme02.setIdAnnonce(augmentation9eme01.getIdLienAnnonce());
+        augmentation9eme02.retrieve();
+        return augmentation9eme02;
+    }
+
+    protected void checkAndUpdate9eme(REAnnoncesAugmentationModification9Eme augmentation9eme, BITransaction transaction)
+            throws Exception {
+        if (!augmentation9eme.isNew()) {
+            augmentation9eme.setEtat(IREAnnonces.CS_ETAT_ENVOYE);
+            augmentation9eme.update(transaction);
+        }
+    }
+
+    protected Object annonceChangementAPI9e(REAnnoncesAugmentationModification9Eme enr01,
+            REAnnoncesAugmentationModification9Eme enr02) throws Exception {
+        RRMeldung9Type annonce9 = factoryType.createRRMeldung9Type();
+        RRMeldung9Type.Hilflosenentschaedigung renteAPI = factoryType.createRRMeldung9TypeHilflosenentschaedigung();
+        AenderungsmeldungHE9Type modification = factoryType.createAenderungsmeldungHE9Type();
+        modification.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
+
+        modification.setKasseZweigstelle(retourneCaisseAgence());
+        modification.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
+        modification.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
+        // Remplir la personne
+        RRLeistungsberechtigtePersonAuslWeakType personne = rempliRRLeistungsberechtigtePersonAuslWeakType(enr01,
+                enr01.getNouveauNoAssureAyantDroit());
+        modification.setLeistungsberechtigtePerson(personne);
+        // Description
+        AenderungsmeldungHE9Type.Leistungsbeschreibung description = factoryType
+                .createAenderungsmeldungHE9TypeLeistungsbeschreibung();
+
+        description.setLeistungsart(enr01.getGenrePrestation());
+        description.setAnspruchsbeginn(retourneXMLGregorianCalendarFromMonth(enr01.getDebutDroit()));
         if (!JadeStringUtil.isBlankOrZero(enr01.getFinDroit())) {
             description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
         }
         if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
-            description.setMutationscode(new Integer(enr01.getCodeMutation()).shortValue());
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
         }
+
         description.setMonatsbetrag(new BigDecimal(testSiNullouZero(enr01.getMensualitePrestationsFrancs())));
-        diminution.setLeistungsbeschreibung(description);
-        return diminution;
+
+        // Base de calcul
+        AenderungsmeldungHE9Type.Leistungsbeschreibung.Berechnungsgrundlagen baseDeCalcul = factoryType
+                .createAenderungsmeldungHE9TypeLeistungsbeschreibungBerechnungsgrundlagen();
+
+        // Si pas d'office AI pas de bloc AI
+        if (!JadeStringUtil.isBlankOrZero(enr02.getOfficeAICompetent())) {
+            baseDeCalcul.setIVDaten(rempliIVDatenWeakTypeHE9Assure(enr01, enr02));
+        }
+
+        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr02));
+        description.setBerechnungsgrundlagen(baseDeCalcul);
+        modification.setLeistungsbeschreibung(description);
+        renteAPI.setAenderungsmeldung(modification);
+        annonce9.setHilflosenentschaedigung(renteAPI);
+        return annonce9;
+
+    }
+
+    protected Object annonceAugmentationAPI9e(REAnnoncesAugmentationModification9Eme enr01,
+            REAnnoncesAugmentationModification9Eme enr02) throws Exception {
+        RRMeldung9Type annonce9 = factoryType.createRRMeldung9Type();
+        RRMeldung9Type.Hilflosenentschaedigung renteAPI = factoryType.createRRMeldung9TypeHilflosenentschaedigung();
+        ZuwachsmeldungHE9Type augmentation = factoryType.createZuwachsmeldungHE9Type();
+        augmentation.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
+
+        augmentation.setKasseZweigstelle(retourneCaisseAgence());
+        augmentation.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
+        augmentation.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
+        // Remplir la personne
+        RRLeistungsberechtigtePersonAuslType personne = rempliRRLeistungsberechtigtePersonAuslType(enr01);
+        augmentation.setLeistungsberechtigtePerson(personne);
+        // Description
+        ZuwachsmeldungHE9Type.Leistungsbeschreibung description = factoryType
+                .createZuwachsmeldungHE9TypeLeistungsbeschreibung();
+
+        description.setLeistungsart(enr01.getGenrePrestation());
+        description.setAnspruchsbeginn(retourneXMLGregorianCalendarFromMonth(enr01.getDebutDroit()));
+        if (!JadeStringUtil.isBlankOrZero(enr01.getFinDroit())) {
+            description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
+        }
+        if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
+        }
+
+        description.setMonatsbetrag(new BigDecimal(testSiNullouZero(enr01.getMensualitePrestationsFrancs())));
+
+        // Base de calcul
+        ZuwachsmeldungHE9Type.Leistungsbeschreibung.Berechnungsgrundlagen baseDeCalcul = factoryType
+                .createZuwachsmeldungHE9TypeLeistungsbeschreibungBerechnungsgrundlagen();
+
+        // Si pas d'office AI pas de bloc AI
+        if (!JadeStringUtil.isBlankOrZero(enr02.getOfficeAICompetent())) {
+            baseDeCalcul.setIVDaten(rempliIVDatenTypeHE9Assure(enr01, enr02));
+        }
+
+        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr02));
+        description.setBerechnungsgrundlagen(baseDeCalcul);
+        augmentation.setLeistungsbeschreibung(description);
+        renteAPI.setZuwachsmeldung(augmentation);
+        annonce9.setHilflosenentschaedigung(renteAPI);
+        return annonce9;
+
     }
 
     protected RRMeldung9Type annonceAugmentationOrdinaire9e(REAnnoncesAugmentationModification9Eme enr01,
@@ -167,7 +261,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
         augmentation.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
         augmentation.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
         // Remplir la personne
-        RRLeistungsberechtigtePersonAuslType personne = rempliRRLeistungsberechtigtePersonAuslType(enr01, enr02);
+        RRLeistungsberechtigtePersonAuslType personne = rempliRRLeistungsberechtigtePersonAuslType(enr01);
         augmentation.setLeistungsberechtigtePerson(personne);
         // Description
         ZuwachsmeldungO9Type.Leistungsbeschreibung description = factoryType
@@ -179,7 +273,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
         }
         if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
-            description.setMutationscode(new Integer(enr01.getCodeMutation()).shortValue());
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
         }
 
         description.setMonatsbetrag(new BigDecimal(testSiNullouZero(enr01.getMensualitePrestationsFrancs())));
@@ -209,13 +303,13 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             // Ajournement
             ZuwachsmeldungO9Type.Leistungsbeschreibung.Berechnungsgrundlagen.FlexiblesRentenAlter ajournement = factoryType
                     .createZuwachsmeldungO9TypeLeistungsbeschreibungBerechnungsgrundlagenFlexiblesRentenAlter();
-            ajournement.setRentenaufschub(rempliRentenaufschubType(enr01, enr02));
+            ajournement.setRentenaufschub(rempliRentenaufschubType(enr02));
             baseDeCalcul.setFlexiblesRentenAlter(ajournement);
         }
 
-        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr01, enr02));
+        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr02));
         if (!JadeStringUtil.isBlankOrZero(enr02.getReduction())) {
-            description.setKuerzungSelbstverschulden(new Integer(enr02.getReduction()).shortValue());
+            description.setKuerzungSelbstverschulden(Integer.valueOf(enr02.getReduction()).shortValue());
         }
         description.setBerechnungsgrundlagen(baseDeCalcul);
         augmentation.setLeistungsbeschreibung(description);
@@ -230,15 +324,16 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
 
         RRMeldung9Type annonce9 = factoryType.createRRMeldung9Type();
         RRMeldung9Type.OrdentlicheRente renteOrdinaire = factoryType.createRRMeldung9TypeOrdentlicheRente();
-        AenderungsmeldungO9Type augmentation = factoryType.createAenderungsmeldungO9Type();
-        augmentation.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
+        AenderungsmeldungO9Type modification = factoryType.createAenderungsmeldungO9Type();
+        modification.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
 
-        augmentation.setKasseZweigstelle(retourneCaisseAgence());
-        augmentation.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
-        augmentation.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
+        modification.setKasseZweigstelle(retourneCaisseAgence());
+        modification.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
+        modification.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
         // Remplir la personne
-        RRLeistungsberechtigtePersonAuslWeakType personne = rempliRRLeistungsberechtigtePersonAusWeaklType(enr01, enr02);
-        augmentation.setLeistungsberechtigtePerson(personne);
+        RRLeistungsberechtigtePersonAuslWeakType personne = rempliRRLeistungsberechtigtePersonAuslWeakType(enr01,
+                enr01.getNouveauNoAssureAyantDroit());
+        modification.setLeistungsberechtigtePerson(personne);
         // Description
         AenderungsmeldungO9Type.Leistungsbeschreibung description = factoryType
                 .createAenderungsmeldungO9TypeLeistungsbeschreibung();
@@ -251,7 +346,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
         }
         if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
-            description.setMutationscode(new Integer(enr01.getCodeMutation()).shortValue());
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
         }
         if (!JadeStringUtil.isBlankOrZero(enr01.getMensualitePrestationsFrancs())) {
             description.setMonatsbetrag(new BigDecimal(testSiNullouZero(enr01.getMensualitePrestationsFrancs())));
@@ -283,17 +378,17 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             // Ajournement
             AenderungsmeldungO9Type.Leistungsbeschreibung.Berechnungsgrundlagen.FlexiblesRentenAlter ajournement = factoryType
                     .createAenderungsmeldungO9TypeLeistungsbeschreibungBerechnungsgrundlagenFlexiblesRentenAlter();
-            ajournement.setRentenaufschub(rempliRentenaufschubTypeWeak(enr01, enr02));
+            ajournement.setRentenaufschub(rempliRentenaufschubTypeWeak(enr02));
             baseDeCalcul.setFlexiblesRentenAlter(ajournement);
         }
 
-        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr01, enr02));
+        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr02));
         if (!JadeStringUtil.isBlankOrZero(enr02.getReduction())) {
-            description.setKuerzungSelbstverschulden(new Integer(enr02.getReduction()).shortValue());
+            description.setKuerzungSelbstverschulden(Integer.valueOf(enr02.getReduction()).shortValue());
         }
         description.setBerechnungsgrundlagen(baseDeCalcul);
-        augmentation.setLeistungsbeschreibung(description);
-        renteOrdinaire.setAenderungsmeldung(augmentation);
+        modification.setLeistungsbeschreibung(description);
+        renteOrdinaire.setAenderungsmeldung(modification);
         annonce9.setOrdentlicheRente(renteOrdinaire);
         return annonce9;
 
@@ -303,19 +398,21 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             REAnnoncesAugmentationModification9Eme enr02) throws Exception {
 
         RRMeldung9Type annonce9 = factoryType.createRRMeldung9Type();
-        RRMeldung9Type.OrdentlicheRente renteOrdinaire = factoryType.createRRMeldung9TypeOrdentlicheRente();
-        ZuwachsmeldungO9Type augmentation = factoryType.createZuwachsmeldungO9Type();
-        augmentation.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
+        RRMeldung9Type.AusserordentlicheRente renteExtraordinaire = factoryType
+                .createRRMeldung9TypeAusserordentlicheRente();
+        AenderungsmeldungAO9Type modification = factoryType.createAenderungsmeldungAO9Type();
+        modification.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
 
-        augmentation.setKasseZweigstelle(retourneCaisseAgence());
-        augmentation.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
-        augmentation.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
+        modification.setKasseZweigstelle(retourneCaisseAgence());
+        modification.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
+        modification.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
         // Remplir la personne
-        RRLeistungsberechtigtePersonAuslType personne = rempliRRLeistungsberechtigtePersonAuslType(enr01, enr02);
-        augmentation.setLeistungsberechtigtePerson(personne);
+        RRLeistungsberechtigtePersonAuslWeakType personne = rempliRRLeistungsberechtigtePersonAuslWeakType(enr01,
+                enr01.getNouveauNoAssureAyantDroit());
+        modification.setLeistungsberechtigtePerson(personne);
         // Description
-        ZuwachsmeldungO9Type.Leistungsbeschreibung description = factoryType
-                .createZuwachsmeldungO9TypeLeistungsbeschreibung();
+        AenderungsmeldungAO9Type.Leistungsbeschreibung description = factoryType
+                .createAenderungsmeldungAO9TypeLeistungsbeschreibung();
 
         description.setLeistungsart(enr01.getGenrePrestation());
         description.setAnspruchsbeginn(retourneXMLGregorianCalendarFromMonth(enr01.getDebutDroit()));
@@ -323,47 +420,40 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
         }
         if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
-            description.setMutationscode(new Integer(enr01.getCodeMutation()).shortValue());
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
         }
 
         description.setMonatsbetrag(new BigDecimal(testSiNullouZero(enr01.getMensualitePrestationsFrancs())));
 
         // Base de calcul
-        ZuwachsmeldungO9Type.Leistungsbeschreibung.Berechnungsgrundlagen baseDeCalcul = factoryType
-                .createZuwachsmeldungO9TypeLeistungsbeschreibungBerechnungsgrundlagen();
+        AenderungsmeldungAO9Type.Leistungsbeschreibung.Berechnungsgrundlagen baseDeCalcul = factoryType
+                .createAenderungsmeldungAO9TypeLeistungsbeschreibungBerechnungsgrundlagen();
         baseDeCalcul.setNiveaujahr(retourneXMLGregorianCalendarFromYear(enr02.getAnneeNiveau()));
 
         // Echelle de la base de calcul
-        SkalaBerechnungType echelleCalcul = rempliScalaBerechnungTyp(enr02);
+        SkalaBerechnungWeakType echelleCalcul = rempliScalaBerechnungWeakTyp(enr02);
         baseDeCalcul.setSkalaBerechnung(echelleCalcul);
 
-        Gutschriften9Type bte = rempliBonnifications9e(enr01, enr02);
+        Gutschriften9WeakType bte = rempliBonnificationsWeak9e(enr01, enr02);
 
         baseDeCalcul.setGutschriften(bte);
-        DJE9BeschreibungType ram = rempliDJE9BeschreibungType(enr01, enr02);
+        DJE9BeschreibungWeakType ram = rempliDJE9BeschreibungWeakType(enr01, enr02);
         baseDeCalcul.setDJEBeschreibung(ram);
         // Si pas d'office AI pas de bloc AI
         if (!JadeStringUtil.isBlankOrZero(enr02.getOfficeAICompetent())) {
-            baseDeCalcul.setIVDaten(rempliIVDatenType9Assure(enr01, enr02));
+            baseDeCalcul.setIVDaten(rempliIVDatenType9AssureWeak(enr01, enr02));
         }
         if (!JadeStringUtil.isBlankOrZero(enr02.getOfficeAiCompEpouse())) {
-            baseDeCalcul.setIVDatenEhefrau(rempliIVDatenType9Conjoint(enr01, enr02));
+            baseDeCalcul.setIVDatenEhefrau(rempliIVDatenType9ConjointWeak(enr01, enr02));
         }
-        if (!JadeStringUtil.isBlankOrZero(enr02.getDureeAjournement())) {
-            // Ajournement
-            ZuwachsmeldungO9Type.Leistungsbeschreibung.Berechnungsgrundlagen.FlexiblesRentenAlter ajournement = factoryType
-                    .createZuwachsmeldungO9TypeLeistungsbeschreibungBerechnungsgrundlagenFlexiblesRentenAlter();
-            ajournement.setRentenaufschub(rempliRentenaufschubType(enr01, enr02));
-            baseDeCalcul.setFlexiblesRentenAlter(ajournement);
-        }
-        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr01, enr02));
+        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr02));
         if (!JadeStringUtil.isBlankOrZero(enr02.getReduction())) {
-            description.setKuerzungSelbstverschulden(new Integer(enr02.getReduction()).shortValue());
+            description.setKuerzungSelbstverschulden(Integer.valueOf(enr02.getReduction()).shortValue());
         }
         description.setBerechnungsgrundlagen(baseDeCalcul);
-        augmentation.setLeistungsbeschreibung(description);
-        renteOrdinaire.setZuwachsmeldung(augmentation);
-        annonce9.setOrdentlicheRente(renteOrdinaire);
+        modification.setLeistungsbeschreibung(description);
+        renteExtraordinaire.setAenderungsmeldung(modification);
+        annonce9.setAusserordentlicheRente(renteExtraordinaire);
         return annonce9;
 
     }
@@ -372,19 +462,19 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             REAnnoncesAugmentationModification9Eme enr02) throws Exception {
 
         RRMeldung9Type annonce9 = factoryType.createRRMeldung9Type();
-        RRMeldung9Type.AusserordentlicheRente renteExtraOrdinaire = factoryType
+        RRMeldung9Type.AusserordentlicheRente renteExtraordinaire = factoryType
                 .createRRMeldung9TypeAusserordentlicheRente();
-        ch.admin.zas.rc.ZuwachsmeldungAO9Type augmentation = factoryType.createZuwachsmeldungAO9Type();
+        ZuwachsmeldungAO9Type augmentation = factoryType.createZuwachsmeldungAO9Type();
         augmentation.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
 
         augmentation.setKasseZweigstelle(retourneCaisseAgence());
         augmentation.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
         augmentation.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
         // Remplir la personne
-        RRLeistungsberechtigtePersonAuslType personne = rempliRRLeistungsberechtigtePersonAuslType(enr01, enr02);
+        RRLeistungsberechtigtePersonAuslType personne = rempliRRLeistungsberechtigtePersonAuslType(enr01);
         augmentation.setLeistungsberechtigtePerson(personne);
         // Description
-        ch.admin.zas.rc.ZuwachsmeldungAO9Type.Leistungsbeschreibung description = factoryType
+        ZuwachsmeldungAO9Type.Leistungsbeschreibung description = factoryType
                 .createZuwachsmeldungAO9TypeLeistungsbeschreibung();
 
         description.setLeistungsart(enr01.getGenrePrestation());
@@ -393,7 +483,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
         }
         if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
-            description.setMutationscode(new Integer(enr01.getCodeMutation()).shortValue());
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
         }
         if (JadeStringUtil.isBlankOrZero(enr01.getMensualiteRenteOrdRemp())) {
             description.setMonatsbetragErsetzteOrdentlicheRente(new BigDecimal(enr01.getMensualiteRenteOrdRemp()));
@@ -425,15 +515,14 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
         if (!JadeStringUtil.isBlankOrZero(enr02.getOfficeAiCompEpouse())) {
             baseDeCalcul.setIVDatenEhefrau(rempliIVDatenType9Conjoint(enr01, enr02));
         }
-
-        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr01, enr02));
+        description.getSonderfallcodeRente().addAll(rempliCasSpecial(enr02));
         if (!JadeStringUtil.isBlankOrZero(enr02.getReduction())) {
-            description.setKuerzungSelbstverschulden(new Integer(enr02.getReduction()).shortValue());
+            description.setKuerzungSelbstverschulden(Integer.valueOf(enr02.getReduction()).shortValue());
         }
         description.setBerechnungsgrundlagen(baseDeCalcul);
         augmentation.setLeistungsbeschreibung(description);
-        renteExtraOrdinaire.setZuwachsmeldung(augmentation);
-        annonce9.setAusserordentlicheRente(renteExtraOrdinaire);
+        renteExtraordinaire.setZuwachsmeldung(augmentation);
+        annonce9.setAusserordentlicheRente(renteExtraordinaire);
         return annonce9;
 
     }
@@ -487,38 +576,36 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
 
     }
 
-    protected RRLeistungsberechtigtePersonAuslWeakType rempliRRLeistungsberechtigtePersonAusWeaklType(
-            REAnnoncesAugmentationModification9Eme enr01, REAnnoncesAugmentationModification9Eme enr02) {
-        RRLeistungsberechtigtePersonAuslWeakType personne = factoryType
-                .createRRLeistungsberechtigtePersonAuslWeakType();
-        personne.setVersichertennummer(enr01.getNoAssAyantDroit());
-        if (!JadeStringUtil.isBlankOrZero(enr01.getNouveauNoAssureAyantDroit())) {
-            personne.setGeaenderteVersichertennummer(enr01.getNouveauNoAssureAyantDroit());
-        }
-        if (!JadeStringUtil.isBlankOrZero(enr01.getIsRefugie())) {
-            personne.setIstFluechtling(convertIntToBoolean(enr01.getIsRefugie()));
-        }
-        FamilienAngehoerigeType membresDeLaFamille = factoryType.createFamilienAngehoerigeType();
-        if (!JadeStringUtil.isBlankOrZero(enr01.getPremierNoAssComplementaire())) {
-            membresDeLaFamille.getVNr1Ergaenzend().add(enr01.getPremierNoAssComplementaire());
-        }
-        if (!JadeStringUtil.isBlankOrZero(enr01.getSecondNoAssComplementaire())) {
-            membresDeLaFamille.getVNr2Ergaenzend().add(enr01.getSecondNoAssComplementaire());
-        }
-        if (!JadeStringUtil.isBlankOrZero(enr01.getCantonEtatDomicile())) {
-            personne.setWohnkantonStaat(new Integer(enr01.getCantonEtatDomicile()).toString());
-        }
-        personne.setFamilienAngehoerige(membresDeLaFamille);
-        personne.setZivilstand(new Integer(enr01.getEtatCivil()).shortValue());
-        return personne;
+    private AbgangsmeldungType createDiminutionCommune(REAnnoncesDiminution9Eme enr01) throws Exception {
+        AbgangsmeldungType diminution = factoryType.createAbgangsmeldungType();
+        diminution.setBerichtsmonat(retourneXMLGregorianCalendarFromMonth(enr01.getMoisRapport()));
 
+        diminution.setKasseZweigstelle(retourneCaisseAgence());
+        diminution.setMeldungsnummer(retourneNoDAnnonceSur6Position(enr01.getIdAnnonce()));
+        diminution.setKasseneigenerHinweis(enr01.getReferenceCaisseInterne());
+        AbgangsmeldungType.LeistungsberechtigtePerson person = factoryType
+                .createAbgangsmeldungTypeLeistungsberechtigtePerson();
+        person.setVersichertennummer(enr01.getNoAssAyantDroit());
+        diminution.setLeistungsberechtigtePerson(person);
+        AbgangsmeldungType.Leistungsbeschreibung description = factoryType
+                .createAbgangsmeldungTypeLeistungsbeschreibung();
+        description.getLeistungsart().add(enr01.getGenrePrestation());
+        if (!JadeStringUtil.isBlankOrZero(enr01.getFinDroit())) {
+            description.setAnspruchsende(retourneXMLGregorianCalendarFromMonth(enr01.getFinDroit()));
+        }
+        if (!JadeStringUtil.isBlankOrZero(enr01.getCodeMutation())) {
+            description.setMutationscode(Integer.valueOf(enr01.getCodeMutation()).shortValue());
+        }
+        description.setMonatsbetrag(new BigDecimal(testSiNullouZero(enr01.getMensualitePrestationsFrancs())));
+        diminution.setLeistungsbeschreibung(description);
+        return diminution;
     }
 
     private DJE9BeschreibungType rempliDJE9BeschreibungType(REAnnoncesAugmentationModification9Eme enr01,
             REAnnoncesAugmentationModification9Eme enr02) {
         DJE9BeschreibungType ramDescription = factoryType.createDJE9BeschreibungType();
         if (!JadeStringUtil.isBlankOrZero(enr02.getRevenuPrisEnCompte())) {
-            ramDescription.setAngerechneteEinkommen(new Integer(testSiNullouZero(enr02.getRevenuPrisEnCompte()))
+            ramDescription.setAngerechneteEinkommen(Integer.valueOf(testSiNullouZero(enr02.getRevenuPrisEnCompte()))
                     .shortValue());
         }
         if (!JadeStringUtil.isBlankOrZero(enr02.getRamDeterminant())) {
@@ -537,7 +624,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             REAnnoncesAugmentationModification9Eme enr02) {
         DJE9BeschreibungWeakType ramDescription = factoryType.createDJE9BeschreibungWeakType();
         if (!JadeStringUtil.isBlankOrZero(enr02.getRevenuPrisEnCompte())) {
-            ramDescription.setAngerechneteEinkommen(new Integer(testSiNullouZero(enr02.getRevenuPrisEnCompte()))
+            ramDescription.setAngerechneteEinkommen(Integer.valueOf(testSiNullouZero(enr02.getRevenuPrisEnCompte()))
                     .shortValue());
         }
         if (!JadeStringUtil.isBlankOrZero(enr02.getRamDeterminant())) {
@@ -562,7 +649,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             bte.setAngerechneteErziehungsgutschrift(new BigDecimal(testSiNullouZero(enr02.getBteMoyennePrisEnCompte())));
         }
         if (!JadeStringUtil.isBlankOrZero(enr02.getNombreAnneeBTE())) {
-            bte.setAnzahlErziehungsgutschrift(new Integer(testSiNullouZero(enr02.getNombreAnneeBTE())).shortValue());
+            bte.setAnzahlErziehungsgutschrift(convertAAMMtoBigDecimal(enr02.getNombreAnneeBTE()).shortValue());
         }
         return bte;
 
@@ -578,7 +665,7 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
             bte.setAngerechneteErziehungsgutschrift(new BigDecimal(testSiNullouZero(enr02.getBteMoyennePrisEnCompte())));
         }
         if (!JadeStringUtil.isBlankOrZero(enr02.getNombreAnneeBTE())) {
-            bte.setAnzahlErziehungsgutschrift(new Integer(testSiNullouZero(enr02.getNombreAnneeBTE())).shortValue());
+            bte.setAnzahlErziehungsgutschrift(convertAAMMtoBigDecimal(enr02.getNombreAnneeBTE()).shortValue());
         }
         return bte;
     }
@@ -594,11 +681,11 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
     private IVDaten9Type rempliIVDatenType9Assure(REAnnoncesAugmentationModification9Eme enr01,
             REAnnoncesAugmentationModification9Eme enr02) throws Exception {
         IVDaten9Type donneeAI = factoryType.createIVDaten9Type();
-        donneeAI.setIVStelle(new Integer(enr02.getOfficeAICompetent()));
-        donneeAI.setInvaliditaetsgrad(new Integer(enr02.getDegreInvalidite()).shortValue());
+        donneeAI.setIVStelle(Integer.valueOf(enr02.getOfficeAICompetent()));
+        donneeAI.setInvaliditaetsgrad(Integer.valueOf(enr02.getDegreInvalidite()).shortValue());
         String codeInfirmite = StringUtils.leftPad(enr02.getCodeInfirmite(), 5);
-        donneeAI.setGebrechensschluessel(new Integer(StringUtils.left(codeInfirmite, 3)));
-        donneeAI.setFunktionsausfallcode(new Integer(StringUtils.right(codeInfirmite, 2)).shortValue());
+        donneeAI.setGebrechensschluessel(Integer.valueOf(StringUtils.left(codeInfirmite, 3)));
+        donneeAI.setFunktionsausfallcode(Integer.valueOf(StringUtils.right(codeInfirmite, 2)).shortValue());
         donneeAI.setDatumVersicherungsfall(retourneXMLGregorianCalendarFromMonth(enr02.getSurvenanceEvenAssure()));
         donneeAI.setIstFruehInvalid(convertIntToBoolean(enr02.getAgeDebutInvalidite()));
 
@@ -608,33 +695,50 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
     private IVDaten9WeakType rempliIVDatenType9AssureWeak(REAnnoncesAugmentationModification9Eme enr01,
             REAnnoncesAugmentationModification9Eme enr02) throws Exception {
         IVDaten9WeakType donneeAI = factoryType.createIVDaten9WeakType();
-        donneeAI.setIVStelle(new Integer(enr02.getOfficeAICompetent()));
-        donneeAI.setInvaliditaetsgrad(new Integer(enr02.getDegreInvalidite()).shortValue());
+        donneeAI.setIVStelle(Integer.valueOf(enr02.getOfficeAICompetent()));
+        donneeAI.setInvaliditaetsgrad(Integer.valueOf(enr02.getDegreInvalidite()).shortValue());
         String codeInfirmite = StringUtils.leftPad(enr02.getCodeInfirmite(), 5);
-        donneeAI.setGebrechensschluessel(new Integer(StringUtils.left(codeInfirmite, 3)));
-        donneeAI.setFunktionsausfallcode(new Integer(StringUtils.right(codeInfirmite, 2)).shortValue());
+        donneeAI.setGebrechensschluessel(Integer.valueOf(StringUtils.left(codeInfirmite, 3)));
+        donneeAI.setFunktionsausfallcode(Integer.valueOf(StringUtils.right(codeInfirmite, 2)).shortValue());
         donneeAI.setDatumVersicherungsfall(retourneXMLGregorianCalendarFromMonth(enr02.getSurvenanceEvenAssure()));
         donneeAI.setIstFruehInvalid(convertIntToBoolean(enr02.getAgeDebutInvalidite()));
 
         return donneeAI;
     }
 
-    /**
-     * Méthode qui rempli
-     * 
-     * @param enr01
-     * @param enr02
-     * @return
-     * @throws Exception
-     */
+    private IVDatenHE9Type rempliIVDatenTypeHE9Assure(REAnnoncesAugmentationModification9Eme enr01,
+            REAnnoncesAugmentationModification9Eme enr02) throws Exception {
+        IVDatenHE9Type donneeAI = factoryType.createIVDatenHE9Type();
+        donneeAI.setIVStelle(Integer.valueOf(enr02.getOfficeAICompetent()));
+        String codeInfirmite = StringUtils.leftPad(enr02.getCodeInfirmite(), 5);
+        donneeAI.setGebrechensschluessel(Integer.valueOf(StringUtils.left(codeInfirmite, 3)));
+        donneeAI.setFunktionsausfallcode(Integer.valueOf(StringUtils.right(codeInfirmite, 2)).shortValue());
+        donneeAI.setDatumVersicherungsfall(retourneXMLGregorianCalendarFromMonth(enr02.getSurvenanceEvenAssure()));
+        donneeAI.setArtHEAnspruch(Integer.valueOf(enr02.getGenreDroitAPI()).shortValue());
+
+        return donneeAI;
+    }
+
+    private IVDatenHE9WeakType rempliIVDatenWeakTypeHE9Assure(REAnnoncesAugmentationModification9Eme enr01,
+            REAnnoncesAugmentationModification9Eme enr02) throws Exception {
+        IVDatenHE9WeakType donneeAI = factoryType.createIVDatenHE9WeakType();
+        donneeAI.setIVStelle(Integer.valueOf(enr02.getOfficeAICompetent()));
+        String codeInfirmite = StringUtils.leftPad(enr02.getCodeInfirmite(), 5);
+        donneeAI.setGebrechensschluessel(Integer.valueOf(StringUtils.left(codeInfirmite, 3)));
+        donneeAI.setFunktionsausfallcode(Integer.valueOf(StringUtils.right(codeInfirmite, 2)).shortValue());
+        donneeAI.setDatumVersicherungsfall(retourneXMLGregorianCalendarFromMonth(enr02.getSurvenanceEvenAssure()));
+        donneeAI.setArtHEAnspruch(Integer.valueOf(enr02.getGenreDroitAPI()).shortValue());
+        return donneeAI;
+    }
+
     private IVDaten9Type rempliIVDatenType9Conjoint(REAnnoncesAugmentationModification9Eme enr01,
             REAnnoncesAugmentationModification9Eme enr02) throws Exception {
         IVDaten9Type donneeAI = factoryType.createIVDaten9Type();
-        donneeAI.setIVStelle(new Integer(enr02.getOfficeAiCompEpouse()));
-        donneeAI.setInvaliditaetsgrad(new Integer(enr02.getDegreInvaliditeEpouse()).shortValue());
+        donneeAI.setIVStelle(Integer.valueOf(enr02.getOfficeAiCompEpouse()));
+        donneeAI.setInvaliditaetsgrad(Integer.valueOf(enr02.getDegreInvaliditeEpouse()).shortValue());
         String codeInfirmite = StringUtils.leftPad(enr02.getCodeInfirmiteEpouse(), 5);
-        donneeAI.setGebrechensschluessel(new Integer(StringUtils.left(codeInfirmite, 3)));
-        donneeAI.setFunktionsausfallcode(new Integer(StringUtils.right(codeInfirmite, 2)).shortValue());
+        donneeAI.setGebrechensschluessel(Integer.valueOf(StringUtils.left(codeInfirmite, 3)));
+        donneeAI.setFunktionsausfallcode(Integer.valueOf(StringUtils.right(codeInfirmite, 2)).shortValue());
         donneeAI.setDatumVersicherungsfall(retourneXMLGregorianCalendarFromMonth(enr02.getSurvenanceEvtAssureEpouse()));
         donneeAI.setIstFruehInvalid(convertIntToBoolean(enr02.getAgeDebutInvaliditeEpouse()));
 
@@ -644,11 +748,11 @@ public class REAnnonces9eXmlService extends REAbstractAnnonceXmlService implemen
     private IVDaten9WeakType rempliIVDatenType9ConjointWeak(REAnnoncesAugmentationModification9Eme enr01,
             REAnnoncesAugmentationModification9Eme enr02) throws Exception {
         IVDaten9WeakType donneeAI = factoryType.createIVDaten9WeakType();
-        donneeAI.setIVStelle(new Integer(enr02.getOfficeAiCompEpouse()));
-        donneeAI.setInvaliditaetsgrad(new Integer(enr02.getDegreInvaliditeEpouse()).shortValue());
+        donneeAI.setIVStelle(Integer.valueOf(enr02.getOfficeAiCompEpouse()));
+        donneeAI.setInvaliditaetsgrad(Integer.valueOf(enr02.getDegreInvaliditeEpouse()).shortValue());
         String codeInfirmite = StringUtils.leftPad(enr02.getCodeInfirmiteEpouse(), 5);
-        donneeAI.setGebrechensschluessel(new Integer(StringUtils.left(codeInfirmite, 3)));
-        donneeAI.setFunktionsausfallcode(new Integer(StringUtils.right(codeInfirmite, 2)).shortValue());
+        donneeAI.setGebrechensschluessel(Integer.valueOf(StringUtils.left(codeInfirmite, 3)));
+        donneeAI.setFunktionsausfallcode(Integer.valueOf(StringUtils.right(codeInfirmite, 2)).shortValue());
         donneeAI.setDatumVersicherungsfall(retourneXMLGregorianCalendarFromMonth(enr02.getSurvenanceEvtAssureEpouse()));
         donneeAI.setIstFruehInvalid(convertIntToBoolean(enr02.getAgeDebutInvaliditeEpouse()));
 
